<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.ProfileActivity">
    <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">
            <TableRow
                    android:layout_weight="1"
                    android:gravity="center">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/full_name"/>
                <TextView
                        android:id="@+id/full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text=""/>
            </TableRow>
            <TableRow
                    android:layout_weight="1"
                    android:gravity="center">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/username"/>
                <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text=""/>
            </TableRow>
            <TableRow
                    android:layout_weight="1"
                    android:gravity="center">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/inst_id"/>
                <TextView
                        android:id="@+id/inst_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text=""/>
            </TableRow>
            <TableRow
                    android:layout_weight="1"
                    android:gravity="center">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/website"/>
                <TextView
                        android:id="@+id/website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text=""/>
            </TableRow>
            <TableRow
                    android:layout_weight="1"
                    android:gravity="center">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/bio"/>
                <TextView
                        android:id="@+id/bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text=""/>
            </TableRow>
            <TableRow
                    android:layout_weight="1"
                    android:gravity="center">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/media_inst"/>
                <TextView
                        android:id="@+id/media_inst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text=""/>
            </TableRow>
            <TableRow
                    android:layout_weight="1"
                    android:gravity="center">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/followed_by"/>
                <TextView
                        android:id="@+id/followed_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text=""/>
            </TableRow>
            <TableRow
                    android:layout_weight="1"
                    android:gravity="center">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/follows"/>
                <TextView
                        android:id="@+id/follows"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text=""/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>






